# DeepForge

./: README.md  main.py  pyproject.toml
.github/workflows/: mlops.yml  pipeline.yml
templates/fastapi-ml-microservice/: Dockerfile  docker-compose.yml  pyproject.toml
templates/fastapi-ml-microservice/app/: main.py
templates/fastapi-ml-microservice/app/api/: routes_inference.py  routes_train.py
templates/fastapi-ml-microservice/app/core/: config.py
templates/fastapi-ml-microservice/app/models/: model.py
templates/fastapi-ml-microservice/app/schemas/: request.py  response.py
templates/fastapi-ml-microservice/app/services/: inference_service.py  loader.py  training_service.py
templates/fastapi-ml-microservice/app/utils/: postprocessing.py  preprocessing.py
templates/fastapi-ml-microservice/scripts/: benchmark.py  export.py  train.py
templates/fastapi-ml-microservice/tests/: test_api.py
