[project]
name = "fastapi-ml-microservice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.13"
dependencies = [
    "fastapi[standard]>=0.116.1",
    "joblib>=1.5.2",
    "loguru>=0.7.3",
    "numpy>=2.3.3",
    "pandas>=2.3.2",
    "scikit-learn>=1.7.2",
]
